Fix design bugs for input checkbox/radio, tables and cards overflow (#167)

--- a/assets/sb-admin/css/components/_cards.scss
+++ b/assets/sb-admin/css/components/_cards.scss
@@ -3,6 +3,6 @@
 }
 
 .card-body {
-    overflow-y: auto;
+    overflow-y: visible;
     overflow-x: initial;
 }
