--- a/assets/sb-admin/css/components/_tables.scss
+++ b/assets/sb-admin/css/components/_tables.scss
@@ -1,6 +1,10 @@
 .table-responsive {
     overflow-x: initial;
 
+    th {
+        vertical-align: middle;
+    }
+
     img {
         width: auto;
         height: auto;
